--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="emailForm.html" id="contact">Contact</a>
                 </li>
                 <li>
-                    <img src="img/JUpic.png" alt="Jackson" id="jackson" href="indexmain.html">
+                    <img src="img/JUpic.png" alt="Jackson" id="jackson" href="index.html">
                 </li>
                 
             </ul>
