--- a/emailForm.html
+++ b/emailForm.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="contactForm.css">
     <script>
         let homeImg = document.getElementById("jackson").onclick = function() {
-	        window.open("/ArcadeOutside/indexmain.html")
+	        window.open("https://jacksonuptain.github.io/Test-Portfolio2/index.html")
         };
     </script>
 </head>
